[package]
name = "versions"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z"
# strip = "symbols"
lto = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
jsonpath_lib = "0.3"
lettre = "0.11"
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
